--- a/src/popup/dictionary.html
+++ b/src/popup/dictionary.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<style>
-			td {
-				min-width: 175px;
-			}
-		</style>
-	</head>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        td {
+            min-width: 175px;
+        }
+    </style>
+</head>
 
-	<body>
-		<table class="w3-table w3-striped" id="dictionary">
-			<tr>
-				<th id="source-title"></th>
-				<th id="target-title"></th>
-				<td>
-					<!-- <a id="export-button" class="w3-button w3-yellow">Export</a> TODO -->
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<input id="source-word" class="w3-input w3-border" type="text" placeholder="Source Word">
-				</td>
-				<td>
-					<input id="translated-word" class="w3-input w3-border" type="text" placeholder="Translated Word">
-				</td>
-				<th>
-					<button id="submit-word" class="w3-button w3-green">Submit</button>
-				</th>
-			</tr>
-		</table>
-		<script src="dictionary.js"></script>
-	</body>
+<body>
+    <table class="w3-table w3-striped" id="dictionary">
+        <tr>
+            <th id="source-title"></th>
+            <th id="target-title"></th>
+            <td>
+                <input type="file" id="import-file" accept=".json" style="display: none;">
+                <button id="import-button" class="w3-button w3-yellow">Import</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <input id="source-word" class="w3-input w3-border" type="text" placeholder="Source Word">
+            </td>
+            <td>
+                <input id="translated-word" class="w3-input w3-border" type="text" placeholder="Translated Word">
+            </td>
+            <th>
+                <button id="submit-word" class="w3-button w3-green">Submit</button>
+            </th>
+        </tr>
+    </table>
+    <button id="export-button" class="w3-button w3-yellow">Export</button>
+    <script src="dictionary.js"></script>
+</body>
 </html>
